--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
           <a routerLink="/" class="navigation-a"> home </a>
         </li>
         <li class="navigation-li inline-block vertical-middle">
-          <a routerLink="/news" class="navigation-a"> news </a>
+          <a routerLink="/newses" class="navigation-a"> news </a>
         </li>
         <li class="navigation-li inline-block vertical-middle">
           <a routerLink="/about" class="navigation-a"> about </a>
